# openbep4eu-calculation-engine

./: .gitignore  README.md  pyproject.toml
src/openbep4eu/: utils.py
src/openbep4eu/building_as_such/: areal_heat_capacity.py  conductance_between_nodes.py  construction_thermal_properties.py  convective_franctions.py  convective_radiative_heat_transfer_coefficients.py  element_boundary_condition.py  ground_properties.py  heating_cooling_setpoints_setbacks.py  internal_gains_lights_dhw_hvac.py  internal_heat_gains_appliances.py  internal_heat_gains_occupancy.py  nominal_heating_cooling_capacity.py  solar_absortion_coefficient.py  solar_heat_gains.py  thermal_needs.py  thermal_radiation_to_the_sky.py  total_internal_gains.py  total_solar_irradiance.py  ventilation_heat_transfer_coefficient.py  volume_air_flow_rates.py
src/openbep4eu/building_as_such/models/: boundary.py  definitions.py  envelope_element.py  epw.py  lookups.py  step_zone.py  types.py  zone_context.py
